log
Wed 08 May 2024 07:49:41 PM UTC: 
 treemap.c | 81 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 73 insertions(+), 8 deletions(-)
 tests:  12|5
total_score: 25/70
446b9d2
Wed 08 May 2024 07:51:45 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  13|4
total_score: 35/70
23ce974
Wed 08 May 2024 08:13:33 PM UTC: 
 treemap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
 tests:  20|3
total_score: 45/70
cbc67d7
Wed 08 May 2024 08:16:18 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 45/70
f254159
Wed 08 May 2024 08:29:42 PM UTC: 
 treemap.c | 52 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 52 insertions(+)
 tests:  25|1
total_score: 60/70
119f49a
Wed 08 May 2024 08:35:31 PM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:184:7: error: redefinition of ‘searchTreeMap’
  184 | Pair *searchTreeMap(TreeMap * tree, void* key) {
      |       ^~~~~~~~~~~~~
treemap.c:164:7: note: previous definition of ‘searchTreeMap’ with type ‘Pair *(TreeMap *, void *)’ {aka ‘Pair *(struct TreeMap *, void *)’}
  164 | Pair *searchTreeMap(TreeMap * tree, void* key) {
      |       ^~~~~~~~~~~~~
treemap.c: In function ‘searchTreeMap’:
treemap.c:205:23: error: assignment to ‘TreeNode *’ {aka ‘struct TreeNode *’} from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  205 |         tree->current = upperBound;
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
21971d2
